# chromatin.py

./: .gitignore  .gitmodules  .travis.yml  README.md  requirements.txt  setup.py
chromatin/: __init__.py  cli.py  env.py  host.py  logging.py  main.py  nvim_plugin.py  plugin.py  rplugin.py  settings.py  state.py  venv.py  venvs.py
chromatin/activate/: haskell.py  host.py
chromatin/config/: component.py  config.py  resources.py  state.py
chromatin/install/: haskell.py  main.py  python.py
chromatin/model/: package.py  plugin.py  rplugin.py  venv.py  venvs.py
integration/: activate_spec.py  add_spec.py  autostart_add_spec.py  autostart_boot_spec.py  bootstrap_spec.py  dir_rplugin_spec.py  dir_venv_spec.py  extension_spec.py  hackage_spec.py  multi_rplugin_spec.py  python_path_spec.py  reboot_spec.py  rplugin_spec.py  setup_spec.py  single_rplugin_spec.py  stackage_spec.py  venv_spec.py
integration/_fixtures/rplugin/flagellum.hs/: flagellum.cabal  nvim.hs
integration/_fixtures/rplugin/flagellum.hs/.stack-work/install/x86_64-linux-tinfo6/lts-12.13/8.4.3/flag-cache/: flagellum-0.1.0.0
integration/_fixtures/rplugin/flagellum.hs/lib/Flagellum/: Init.hs  Plugin.hs
integration/_fixtures/rplugin/flagellum.hs/lib/Neovim/Example/Plugin/: Random.hs
plugin/: bootstrap.vim
scripts/: bootstrap.py
test/: base.py  log_buffer_env.py
tests/: base.py  log_buffer_env.py
unit/: add_spec.py  init_spec.py  json_spec.py  plugin_functions_spec.py  read_conf_spec.py  rplugin_spec.py  show_spec.py  stage_1_spec.py  update_spec.py  venv_spec.py
unit/_fixtures/: rplugin
(+44 files in other folders)
